[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bagunca/bloco.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bagunca/sensor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bagunca/mini3.gd" type="Script" id=3]
[ext_resource path="res://Bagunca/chão.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bagunca/sensor2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bagunca/fundo.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="fundo" parent="." instance=ExtResource( 7 )]
position = Vector2( 462, 297 )
scale = Vector2( 0.690313, 0.751563 )

[node name="bloco" parent="." instance=ExtResource( 1 )]

[node name="sensor" parent="." instance=ExtResource( 2 )]
position = Vector2( 447, 483 )

[node name="sensor2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2, 24 )

[node name="chão" parent="." instance=ExtResource( 4 )]
position = Vector2( 9, 265 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 513, 336 )
current = true
zoom = Vector2( 1, 1.125 )
smoothing_enabled = true

[connection signal="area_exited" from="sensor" to="." method="_on_sensor_area_exited"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_entered" from="sensor2" to="." method="_on_sensor2_body_entered"]
